[package]
name = "plexdrive"
version = "0.1.0"
authors = ["Dominik Weidenfeld <dominik.weidenfeld@twt.de>"]

[dependencies]
clap = "2.26.0"
log = "0.3.8" 
env_logger = "0.4.3"
yup-oauth2 = "^ 1.0"
google-drive3 = "^ 1.0"
hyper = "^ 0.10"
hyper-rustls = "0.6.1"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
rusqlite = "0.12.0"