[package]
name = "plexdrive"
version = "0.1.0"
authors = ["Dominik Weidenfeld <dominik.weidenfeld@twt.de>"]

[dependencies]
clippy = "*"
clap = "^ 2.26"
log = "^ 0.3" 
env_logger = "^ 0.4"
yup-oauth2 = "^ 1.0"
google-drive3 = "=1.0.5"
hyper = "^ 0.10"
hyper-rustls = "^ 0.6"
serde = "^ 1.0"
serde_json = "^ 1.0"
serde_derive = "^ 1.0"
rusqlite = "^ 0.12"
chrono = "0.4.0"
fuse = "0.3.0"
libc = "0.2.29"
time = "0.1.38"
threadpool = "1.6.0"
bus = "1.3.1"